--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "easygithdev/phpopenaiexamples",
+    "name": "easygithdev/php-openai-examples",
     "description": "Examples for the project PHPOpenAI",
     "keywords": [
         "php",
@@ -14,7 +14,7 @@
         "whisper",
         "api",
         "curl",
-        "phpopenai",
+        "php-openai",
         "easygithdev"
     ],
     "license": "MIT",
@@ -27,6 +27,6 @@
     "require": {
         "php": ">=8.1",
         "ext-curl": "*",
-        "easygithdev/phpopenai": "*"
+        "easygithdev/php-openai": "*"
     }
 }
